--- a/index.html
+++ b/index.html
@@ -17,16 +17,6 @@
       <a class="navbar-brand text-white">
         <span>Location App</span>
       </a>
-      <!-- <button class="navbar-toggler" data-toggle="collapse" data-target="#nav1">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="navbar-collapse collapse" id="nav1">
-        <ul class="navbar-nav text-center ml-auto">
-          <li class="nav-item"><a class="nav-link" href="">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="">Contact</a></li>
-        </ul>
-      </div> -->
     </nav>
 
     <div class="input-group mt-5 w-50" style="margin-left: 25%;">
@@ -84,10 +74,7 @@
     >
       City not found
     </div>
-    <div
-      id="map"
-      style="width: 600px; height: 400px; margin: 2rem 175px;"
-    ></div>
+    <div id="map" style="width: 600px; height: 400px; margin: 2rem 18%;"></div>
     <script src="https://api-maps.yandex.ru/2.1?apikey=d301ecb2-c86d-4b9a-a1e3-fb74a4bb0622&lang=en_US"></script>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
