--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     >
       City not found
     </div>
-    <div id="map" style="width: 600px; height: 400px; margin: 2rem 18%;"></div>
+    <div id="map" style="width: 55%; height: 50vh; margin: 2rem 22.5%;"></div>
     <script src="https://api-maps.yandex.ru/2.1?apikey=d301ecb2-c86d-4b9a-a1e3-fb74a4bb0622&lang=en_US"></script>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
